# CCRAS-suite

./: .env.example  .gitignore  README.md  errors2.txt  package-lock.json  start_backend.sh  start_frontend.sh  test_docx.py  tsc-errors.txt
.claude/: settings.local.json
ai/: .env.example  README.md  api_server.py  config.py  hypothesis.py  load_gaps_from_json.py  requirements.txt  research_gap.py  research_gaps_debug_raw.txt  research_gaps_output.json  scorer.py
backend/: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-full.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20240611_01_initial_mvp.py
backend/app/: main.py
backend/app/api/routers/: graph_router.py  ingestion_router.py  ontology_router.py  paper_router.py  snowball_router.py
backend/app/api/schemas/: paper.py
backend/app/core/: config.py  logging.py
backend/app/db/: full_schema.sql  schema.sql  session.py
backend/app/models/: __init__.py  entity.py  entity_alias.py  paper.py  paper_entity.py  pipeline_task.py  raw_paper.py  relationship_instance.py  study.py
backend/app/routers/: entities.py  evidence_adapter.py  library.py  papers.py  study.py  study_design_ai.py
backend/app/schemas/: __init__.py  entity.py  paper.py  study.py
backend/app/services/: entity_extraction.py  knowledge_graph.py  ontology_graph.py  paper_import.py  study_design_ai.py
backend/scripts/: bulk_import.py
docs/: README.md
frontend/: build_output.txt  errors.txt  errors3.txt  errors4.txt  lint-errors.txt  lint_output.txt  package-lock.json  (+6 more)
(+241 files in other folders)
