[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brahma-backend"
version = "0.1.0"
description = "Backend for Brahma biomedical AI platform"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.22.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.12.0",
    "python-dotenv>=1.0.0",
    "neo4j>=5.0.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
]

[project.urls]
Homepage = "https://github.com/yourusername/brahma"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"